<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView1Text"
        android:textColor="#ff7809"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView2Text"
        android:textSize="20sp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnChooseContact"
        android:text="@string/btnChooseContactText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textViewContactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactNameText"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnChooseContact" />

    <TextView
        android:id="@+id/textViewContactNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/contactNumberText"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewContactName" />

    <EditText
        android:id="@+id/editTextSMS"
        android:hint="@string/editTextHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/textViewContactNumber" />

    <Button
        android:id="@+id/btnSendSMS"
        android:text="@string/btnSendSMSText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSMS"
        android:layout_marginTop="10dp"/>
</RelativeLayout>
